--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <!-- Fontawesome link -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <!-- Favicon Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <!-- stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Love Maths</title>
 </head>
 
 <body>
